Fix skull textures in modded platform